--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
-
-spring.datasource.url=jdbc:mysql://localhost:3306/new
-spring.datasource.username=root
-spring.datasource.password=AwerS2013
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+database.driverClassName=com.mysql.cj.jdbc.Driver
+database.url=jdbc:mysql://localhost:3306/new
+database.username=root
+database.password=AwerS2013
 spring.jpa.open-in-view=false
